--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@nrwl/next": "13.7.1",
     "core-js": "^3.6.5",
+    "firebase": "8.10.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "3.0.5",
+    "react-firebaseui": "5.0.2",
+    "react-icons": "4.3.1",
     "react-is": "17.0.2",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.3",
