--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "firebase": "8.10.0",
     "next": "12.0.7",
+    "next-seo": "5.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "3.0.5",
